@@ -2,6 +2,6 @@ AUX julius-4.1-makefile.patch 10908 RMD160 d59ea21d9c0279bf28be2a03206dc5733fad3
 AUX julius-4.1-mkfacrash.patch 578 RMD160 7f44847081f4779c77106429d6f635ea82b3f1b6 SHA1 ed59e6accacfbe202024534331d2782d8c73b075 SHA256 9f596306b82478cd33c749760865165da2aacc3289b81fb0ea252b83625ba3bf
 AUX julius-4.1-newParam.patch 3687 RMD160 353736266f7667ecae0aaa9c5bdb95d1c6701030 SHA1 a67e098bdbf9392c79a501a528a7bc057753e5c5 SHA256 c594e947b49555d53fe8c27f82df1cc7eda32882df706c34cf20e3a7810f8c23
 DIST julius-4.1.tar.gz 1133938 RMD160 bf7621c07147986ddd1dd446e28feeb3eae163db SHA1 7ec08930febc399ac6b220b6c8882f6d49339b29 SHA256 56e12b556946027962ba2706bf84286cac9ab417b79bcbf5b2b19cf31020f418
-EBUILD julius-4.1.ebuild 857 RMD160 5ccdeaf0cf14060e61bd837d162ebfc720ffc623 SHA1 33f71c8fb0c1de619316a9386e9f05173fd69e63 SHA256 88352d0d31161e4f639bcaaa01a2897fd777f2d061856fff55bd3c6ce36dd794
-MISC ChangeLog 408 RMD160 f6ea3e5311496b8bf16ce377dbcc72bece058cf8 SHA1 20d81d428545a8f01173266123bc2d57ef1ccf8a SHA256 a27e8352a421c68e4f57c1d30c635ed2bc273d7580ae0943b6233e4c4e4e21a1
+EBUILD julius-4.1.ebuild 924 RMD160 be5b963b856ae6308f6d8d89e69dec4e45d64c2c SHA1 6a03831bf7bac911954331d2de5461289265b168 SHA256 d69e8d236160c823a2f038f2d4934f554ac983a5474bf425ce3c6e946773b959
+MISC ChangeLog 592 RMD160 ae61f2d286fd7b307f2dad6e1a54bd166aae3e16 SHA1 6b6d8beecfd0588369d48c49fd7184b07e2999de SHA256 0da74cddf44b954210a3eb947bfccb5a901388b7d6dfe5774b2eb87a38d1c2ea
 MISC metadata.xml 233 RMD160 330c0bca7b6e8ac119c86c76aa1cdacbd75a3be5 SHA1 3ab9c3538c3efcb3e27dc47329f1a7519c51942e SHA256 734cac1d66a42bc20422cdd070a512580a2394a73f530b82ac793599d1c908da
